--- a/README
+++ b/README
@@ -4,7 +4,7 @@
 +====================================================================+
 
 Authors:
-Andreas Tonnesen(andreto@olsr.org)
+Andreas Tønnesen(andreto@olsr.org)
 Thomas Lopatic  (thomas@lopatic.de)
 Aaron Kaplan (aaron@lo-res.org)
 
