--- a/CHANGELOG
+++ b/CHANGELOG
@@ -18,6 +18,17 @@ PATCHES and BUGFIXES from Henning Rogge <rogge@fgan.de>
 - fix segfault in parsing HNA package with bad netmask
 - fix avl_comparator for route_paths
 - fix alignment problem in packet buffers
+- fix: segfault in neighbor/neighbor-2 table
+- fix: lqmult default parsing
+- HACK: MinTCVTime parameter hack for Berlin FF network...
+  feel free to ask on the mailing list.
+- add Watchdog plugin
+- add explicit runtime lock for OLSR.
+- remove lq-hysteresis for tc on the receiver side.
+- enhance protection against malformed packages to prevent
+  OLSR parsing uninitialized data. Thank you Markus and Keks for the LONG
+  debugging session
+- block tc-redundancy 0/1, it doesn't work with the current dijkstra code
 
 PATCH from Markus Kittenberger <Markus.Kittenberger@gmx.at>:
 - txtinfo plugin: add more http options
@@ -31,6 +42,9 @@ PATCH from Markus Kittenberger <Markus.Kittenberger@gmx.at>:
 - fix olsr_times() to handle different OS implementations (Linux, BSD, OS X)
 - fix several compiler warnings
 - fix olsr_times() to handle different OS implementations (Linux, BSD, OS X)
+- create policy rule later during startup
+- send MID also with one interface, if its ip different from originator-id
+- linux rtnetlink code cleanup
 - workaround: generate routes to single hop neighbours on the fly when inserting routes via them
     (active only with fib_metric=flat)
 - testing: insert routes with source-ip set to originator ip
@@ -55,6 +69,7 @@ PATCHES from Hannes Gredler <hannes@gredler.at>:
 - log RIB add/del transactions only if there is an actual route change
 - fix to to always insert a HNA Net when receiving a HNA refresh
 - fix delete all routes if the last IP address is gone
+- reduce TC vtime jitter from 25% down to 5%
 
 PATCHES and BUGFIXES from Sven-Ola Tuecke <sven-ola@gmx.de>:
 - add a fixed-point math implementation, which saves
@@ -70,6 +85,19 @@ PATCHES and BUGFIXES from Aaron Kaplan <aaron@lo-res.org>:
 - fix openbsd warnings / compile errors about sprintf strcpy
 - fix string overflow in dyn_gw plugin
 - fix string overflow in pgraph plugin
+- fix openbsd/osx coompile errors
+
+BUGFIX by Peter Tarjan <peter.tarjan@birdtelecom.hu>:
+- Do not remember LQ information UNSPEC_LINK neighbors in Hellos.
+- ignore UNSPEC link for linktype if there is an ASYM/LOST/SYM Link in the
+  same Hello message
+- ignore UNSPEC_LINKS during MPR lookup
+- broken MID route handling: we also check the data structures for routing,
+  even if a MID entry exists.
+
+BUGFIX by John Hay <jhay@meraka.org.za>:
+- FIX: IPv6 MTU in BSD
+- Another BSD ipv6 Patch by John Hay
 
 BUGFIX from Erik Tromp <erik_tromp@hotmail.com>:
 - update in bmf due to new flags field in tc_edge_entry
@@ -86,8 +114,8 @@ PATCH from Hagen Paul Pfeifer <hagen@jauu.net>:
 PATCH from Andres Ambrois <andresambrois@gmail.com>:
 - nameservice plugin: add parameters for SIGHUPing other daemons, or calling scripts
 
-BUGFIX by John Hay <jhay@meraka.org.za>:
-- FIX: IPv6 MTU in BSD
+BUGFIX by Benny Tops <b.tops@mindef.nl>:
+- fix wrong order of drop_tc checkt in olsr_input_tc
 
 0.5.5 ---------------------------------------------------------------------
 
