--- a/CHANGELOG
+++ b/CHANGELOG
@@ -29,6 +29,11 @@ PATCHES and BUGFIXES from Henning Rogge <rogge@fgan.de>
   OLSR parsing uninitialized data. Thank you Markus and Keks for the LONG
   debugging session
 - block tc-redundancy 0/1, it doesn't work with the current dijkstra code
+- convert httpinfo/txtinfo/dotdraw to nonblocking and autobuf to
+  prevent blocking outgoing connections
+- fix some bugs with lq-mult
+- fix bug in duplicate set sequencenumber handling
+- add Debian/KFreeBSD support (Thanks to Holger Levsen and friends for help)
 
 PATCH from Markus Kittenberger <Markus.Kittenberger@gmx.at>:
 - txtinfo plugin: add more http options
@@ -53,6 +58,9 @@ PATCH from Markus Kittenberger <Markus.Kittenberger@gmx.at>:
 Testing features must be activated in olsr_cfg.h before compiling olsrd.
 This features are used to run a test network in Vienna parallel to the existing
 OLSR network.
+- more RT-Netlink cleanups and fixes
+- backport of timejump patch from TIP
+- Add detection for vanishing interfaces to Linux netlink code
 
 PATCHES from Hannes Gredler <hannes@gredler.at>:
 - add small valgrind howto
@@ -80,6 +88,8 @@ PATCHES and BUGFIXES from Sven-Ola Tuecke <sven-ola@gmx.de>:
 - fix olsr_times() to handle different OS implementations (Linux, BSD, OS X)
 - fix several compiler warnings
 - fix olsr_times() to handle different OS implementations (Linux, BSD, OS X)
+- add makefile support for google android
+- fix default olsrd.conf examples
 
 PATCHES and BUGFIXES from Aaron Kaplan <aaron@lo-res.org>:
 - fix openbsd warnings / compile errors about sprintf strcpy
@@ -98,6 +108,9 @@ BUGFIX by Peter Tarjan <peter.tarjan@birdtelecom.hu>:
 BUGFIX by John Hay <jhay@meraka.org.za>:
 - FIX: IPv6 MTU in BSD
 - Another BSD ipv6 Patch by John Hay
+- fixes for 64 Bit FreeBSD
+- fixes for NetBSD
+
 
 BUGFIX from Erik Tromp <erik_tromp@hotmail.com>:
 - update in bmf due to new flags field in tc_edge_entry
@@ -116,6 +129,12 @@ PATCH from Andres Ambrois <andresambrois@gmail.com>:
 
 BUGFIX by Benny Tops <b.tops@mindef.nl>:
 - fix wrong order of drop_tc checkt in olsr_input_tc
+
+Felix (OpenWRT NBD):
+- fix bison problem for OpenWRT
+
+Sebastian Harl:
+- add LISTEN parameter for httpinfo/txtinfo/dotdraw
 
 0.5.5 ---------------------------------------------------------------------
 
